--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <body>
         <ul>
             <li><a href="/2048/index.html">2048</a></li>
-            <li><a href="/snake/index.html">Snake</a></li>
-            <li>
-                <a href="/BreakoutPC/mapCreate.html">Breakout Create Map</a>
-            </li>
+            <li><a href="/Snake/index.html">Snake</a></li>
+            <li><a href="/BreakoutPC/mapCreate.html">Breakout Create Map</a></li>
             <li><a href="/BreakoutPC/index.html">BreakoutPC</a></li>
+            <li><a href="/Tetris/index.html">Tetris</a></li>
         </ul>
     </body>
 </html>
