--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
         <ul>
             <li><a href="/2048/index.html">2048</a></li>
+            <li><a href="/2048-vue/index.html">2048</a></li>
             <li><a href="/Snake/index.html">Snake</a></li>
             <li><a href="/BreakoutPC/mapCreate.html">Breakout Create Map</a></li>
             <li><a href="/BreakoutPC/index.html">BreakoutPC</a></li>
